src/yini_test/cases/golden/strict/valid/document-terminator/lowercase-end-marker.strict.yini
@yini strict

^ Document
name = "strict-lowercase-end-marker"
status = "complete"

/end
