src/yini_test/cases/golden/strict/invalid/concatenation/string-plus-number.strict.yini
@yini strict

^ Concat
label = "port-" + 8080

/END
